fixed some ui spacing

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -201,7 +201,7 @@ code {
 
 #stats {
   background: $stats-bg;
-  bottom: 78px;
+  bottom: 75px;
   clear: left;
   color: $stats-color;
   left: 0;
@@ -209,7 +209,7 @@ code {
 
 #location {
   background: #2e0a2e;
-  bottom: 52px;
+  bottom: 50px;
   height: 17px;
   overflow: scroll;
 }
@@ -324,7 +324,7 @@ code {
   }
 
   #stats {
-    bottom: 80px;
+    bottom: 78px;
   }
 
   #location {
